--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
-		<title></title>
+		<title>Klinco - Educación Financiera</title>
 	</head>
 	<body>
 		<div id="header">
-			TITULO
+			TÍTULO
 		</div>
 		<div id="main">
 			CUERPO
