--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<title>Klinco - Educación Financiera</title>
 	</head>
 	<body>
-		<div id="header">
-			TÍTULO
-		</div>
-		<div id="main">
-			CUERPO
-		</div>
-		<div id="footer">
-			PIE
-		</div>
+		<div id="container">
+			<div id="header">
+				LOGO
+			</div>
+			<div id="main">
+				<div id="descripcion">
+					Te prestamos hasta 5,000
+				</div>
+				<div id="Imagenes">
+				</div>
+				<div id="suscribe">
+					<p>Ingresa tu email para notificarte noticias de Klinco</p>
+					<form id="suscripcion">
+						<input type="email" placeholder="">
+						<input type="submit" value="Enviar">
+					</form>
+				</div>
+			</div>
+			<div id="footer">
+				<p>
+					Tienes preguntas o comentarios?<a href="feedback.html"> Haznoslo saber!</a>
+				</p>
+				<p>
+					2013 - Klinco 
+				</p>
+			</div>		
+		</div> 
 	</body>
 </html>
