--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-		<title>Klinco - Educación Financiera</title>
+		<title>Klinco - Crédito - Educación Financiera - Libertad</title>
 	</head>
 	<body>
 		<div id="container">
@@ -23,6 +23,23 @@
 						<input type="email" placeholder="">
 						<input type="submit" value="Enviar">
 					</form>
+				</div>
+				<div id="info">
+					<div id="seccion-uno" class="mpo">
+						<img src="">
+						<h3 class="info-tit">Crédito</h3>
+						<p>Te proporcionamos tips y educación financiera para que tu tengas el control de tu vida y no los bancos</p>
+					</div>
+					<div id="seccion-dos" class="mpo">
+						<img src="">
+						<h3 class="info-tit">Educación</h3>
+						<p>Te proporcionamos tips y educación financiera para que tu tengas el control de tu vida y no los bancos</p>
+					</div>
+					<div id="seccion-tres" class="mpo">
+						<img src="">
+						<h3 class="info-tit">Libertad</h3>
+						<p>Te proporcionamos tips y educación financiera para que tu tengas el control de tu vida y no los bancos</p>
+					</div>
 				</div>
 			</div>
 			<div id="footer">
