--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<body>
 		<div id="container">
 			<div id="header">
-				LOGO
+				<img src="img/klinco_logo.png">
+				<img src="img/klinco_dragon.png">
 			</div>
 			<div id="main">
 				<div id="descripcion">
