--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<body>
 		<div id="container">
 			<div id="header">
-				<img src="img/klinco_logo.png">
-				<img src="img/klinco_dragon.png">
+				<img id="img_logo" src="img/logo_full.png">
 			</div>
 			<div id="main">
 				<div id="descripcion">
