--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 					<div id="seccion-uno" class="mpo">
 						<img src="">
 						<h3 class="info-tit">Crédito</h3>
-						<p>Te proporcionamos tips y educación financiera para que tu tengas el control de tu vida y no los bancos</p>
+						<p>Entenderas los conceptos que involucran esta herramienta financiera y la mejor manera de obtenerlo con nosotros. Durante esta experiencia seguro obtendras el mejor crédito a tu medida</p>
 					</div>
 					<div id="seccion-dos" class="mpo">
 						<img src="">
 						<h3 class="info-tit">Educación</h3>
-						<p>Te proporcionamos tips y educación financiera para que tu tengas el control de tu vida y no los bancos</p>
+						<p>La mejor experiencia para entender las practicas mas eficientes en el uso del dinero, un entrenamiento para mejorar tu relación con el dinero y el crédito</p>
 					</div>
 					<div id="seccion-tres" class="mpo">
 						<img src="">
 						<h3 class="info-tit">Libertad</h3>
-						<p>Te proporcionamos tips y educación financiera para que tu tengas el control de tu vida y no los bancos</p>
+						<p>Imaginate dominar tu economía con inteligencia financiera que te permita respirar tranquilidad y cumplir tus objetivos</p>
 					</div>
 				</div>
 			</div>
