--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-		<title>Klinco - Crédito - Educación Financiera - Libertad</title>
+		<title>Klinco   Crédito - Educación Financiera - Libertad</title>
 	</head>
 	<body>
 		<div id="container">
@@ -17,12 +17,15 @@
 				</div>
 				<div id="Imagenes">
 				</div>
+				
 				<div id="suscribe">
-					<p>Ingresa tu email para notificarte noticias de Klinco</p>
-					<form id="suscripcion">
-						<input type="email" placeholder="">
-						<input type="submit" value="Enviar">
-					</form>
+					<div id="cont">
+						<p>Ingresa tu email para notificarte noticias de Klinco</p>
+						<form id="suscripcion">
+							<input type="email" placeholder="">
+							<input type="submit" value="Enviar">
+						</form>
+					</div>
 				</div>
 				<div id="info">
 					<div id="seccion-uno" class="mpo">
