--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 				</div>
 				<div id="Imagenes">
 				</div>
-				
+
 				<div id="suscribe">
 					<div id="cont">
 						<p>Ingresa tu email para notificarte noticias de Klinco</p>
 						<form id="suscripcion">
-							<input type="email" placeholder="">
+							<input type="email" placeholder="Tu email aquí">
 							<input type="submit" value="Enviar">
 						</form>
 					</div>
