--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			</div>
 			<div id="main">
 				<div id="descripcion">
-					Te prestamos hasta 5,000
+					 <h1>Klinco está enfocado en apoyarte a tener tus finanzas en equilibrio</h1>
 				</div>
 				<div id="Imagenes">
 				</div>
@@ -22,9 +22,10 @@
 					<div id="cont">
 						<p>Ingresa tu email para notificarte noticias de Klinco</p>
 						<form id="suscripcion">
-							<input type="email" placeholder="Tu email aquí">
+							<input type="email" placeholder="Tu email aquí" required="required">
 							<input type="submit" value="Enviar">
 						</form>
+						<div id="respuesta"></div>
 					</div>
 				</div>
 				<div id="info">
